cpp_parser/generated/bapelParser.cpp

// Generated from cpp_parser/bapel.g4 by ANTLR 4.9.2


#include "bapelVisitor.h"

#include "bapelParser.h"


using namespace antlrcpp;
using namespace antlr4;

bapelParser::bapelParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

bapelParser::~bapelParser() {
  delete _interpreter;
}

std::string bapelParser::getGrammarFileName() const {
  return "bapel.g4";
}

const std::vector<std::string>& bapelParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& bapelParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- SourceFileContext ------------------------------------------------------------------

bapelParser::SourceFileContext::SourceFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t bapelParser::SourceFileContext::getRuleIndex() const {
  return bapelParser::RuleSourceFile;
}

void bapelParser::SourceFileContext::copyFrom(SourceFileContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ImplSourceFileContext ------------------------------------------------------------------

bapelParser::ImplementsHeaderContext* bapelParser::ImplSourceFileContext::implementsHeader() {
  return getRuleContext<bapelParser::ImplementsHeaderContext>(0);
}

tree::TerminalNode* bapelParser::ImplSourceFileContext::EOF() {
  return getToken(bapelParser::EOF, 0);
}

bapelParser::ImportsSectionContext* bapelParser::ImplSourceFileContext::importsSection() {
  return getRuleContext<bapelParser::ImportsSectionContext>(0);
}

bapelParser::ImplsSectionContext* bapelParser::ImplSourceFileContext::implsSection() {
  return getRuleContext<bapelParser::ImplsSectionContext>(0);
}

bapelParser::FlagsSectionContext* bapelParser::ImplSourceFileContext::flagsSection() {
  return getRuleContext<bapelParser::FlagsSectionContext>(0);
}

bapelParser::SourcesContext* bapelParser::ImplSourceFileContext::sources() {
  return getRuleContext<bapelParser::SourcesContext>(0);
}

bapelParser::ImplSourceFileContext::ImplSourceFileContext(SourceFileContext *ctx) { copyFrom(ctx); }


antlrcpp::Any bapelParser::ImplSourceFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitImplSourceFile(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BaseSourceFileContext ------------------------------------------------------------------

bapelParser::ModuleHeaderContext* bapelParser::BaseSourceFileContext::moduleHeader() {
  return getRuleContext<bapelParser::ModuleHeaderContext>(0);
}

tree::TerminalNode* bapelParser::BaseSourceFileContext::EOF() {
  return getToken(bapelParser::EOF, 0);
}

bapelParser::ImportsSectionContext* bapelParser::BaseSourceFileContext::importsSection() {
  return getRuleContext<bapelParser::ImportsSectionContext>(0);
}

bapelParser::ImplsSectionContext* bapelParser::BaseSourceFileContext::implsSection() {
  return getRuleContext<bapelParser::ImplsSectionContext>(0);
}

bapelParser::FlagsSectionContext* bapelParser::BaseSourceFileContext::flagsSection() {
  return getRuleContext<bapelParser::FlagsSectionContext>(0);
}

bapelParser::SourcesContext* bapelParser::BaseSourceFileContext::sources() {
  return getRuleContext<bapelParser::SourcesContext>(0);
}

bapelParser::BaseSourceFileContext::BaseSourceFileContext(SourceFileContext *ctx) { copyFrom(ctx); }


antlrcpp::Any bapelParser::BaseSourceFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitBaseSourceFile(this);
  else
    return visitor->visitChildren(this);
}
bapelParser::SourceFileContext* bapelParser::sourceFile() {
  SourceFileContext *_localctx = _tracker.createInstance<SourceFileContext>(_ctx, getState());
  enterRule(_localctx, 0, bapelParser::RuleSourceFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(202);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case bapelParser::MODULE: {
        _localctx = dynamic_cast<SourceFileContext *>(_tracker.createInstance<bapelParser::BaseSourceFileContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(172);
        moduleHeader();
        setState(174);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == bapelParser::IMPORTS) {
          setState(173);
          importsSection();
        }
        setState(177);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == bapelParser::IMPLS) {
          setState(176);
          implsSection();
        }
        setState(180);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == bapelParser::FLAGS) {
          setState(179);
          flagsSection();
        }
        setState(183);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << bapelParser::PUB)
          | (1ULL << bapelParser::DECL)
          | (1ULL << bapelParser::FN)
          | (1ULL << bapelParser::TYPE)
          | (1ULL << bapelParser::TRAIT)
          | (1ULL << bapelParser::IMPL))) != 0)) {
          setState(182);
          sources();
        }
        setState(185);
        match(bapelParser::EOF);
        break;
      }

      case bapelParser::IMPLEMENTS: {
        _localctx = dynamic_cast<SourceFileContext *>(_tracker.createInstance<bapelParser::ImplSourceFileContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(187);
        implementsHeader();
        setState(189);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == bapelParser::IMPORTS) {
          setState(188);
          importsSection();
        }
        setState(192);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == bapelParser::IMPLS) {
          setState(191);
          implsSection();
        }
        setState(195);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == bapelParser::FLAGS) {
          setState(194);
          flagsSection();
        }
        setState(198);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << bapelParser::PUB)
          | (1ULL << bapelParser::DECL)
          | (1ULL << bapelParser::FN)
          | (1ULL << bapelParser::TYPE)
          | (1ULL << bapelParser::TRAIT)
          | (1ULL << bapelParser::IMPL))) != 0)) {
          setState(197);
          sources();
        }
        setState(200);
        match(bapelParser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleHeaderContext ------------------------------------------------------------------

bapelParser::ModuleHeaderContext::ModuleHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bapelParser::ModuleHeaderContext::MODULE() {
  return getToken(bapelParser::MODULE, 0);
}

bapelParser::ModuleIDContext* bapelParser::ModuleHeaderContext::moduleID() {
  return getRuleContext<bapelParser::ModuleIDContext>(0);
}


size_t bapelParser::ModuleHeaderContext::getRuleIndex() const {
  return bapelParser::RuleModuleHeader;
}


antlrcpp::Any bapelParser::ModuleHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitModuleHeader(this);
  else
    return visitor->visitChildren(this);
}

bapelParser::ModuleHeaderContext* bapelParser::moduleHeader() {
  ModuleHeaderContext *_localctx = _tracker.createInstance<ModuleHeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, bapelParser::RuleModuleHeader);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(204);
    match(bapelParser::MODULE);
    setState(205);
    moduleID();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImplementsHeaderContext ------------------------------------------------------------------

bapelParser::ImplementsHeaderContext::ImplementsHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bapelParser::ImplementsHeaderContext::IMPLEMENTS() {
  return getToken(bapelParser::IMPLEMENTS, 0);
}

bapelParser::ModuleIDContext* bapelParser::ImplementsHeaderContext::moduleID() {
  return getRuleContext<bapelParser::ModuleIDContext>(0);
}


size_t bapelParser::ImplementsHeaderContext::getRuleIndex() const {
  return bapelParser::RuleImplementsHeader;
}


antlrcpp::Any bapelParser::ImplementsHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitImplementsHeader(this);
  else
    return visitor->visitChildren(this);
}

bapelParser::ImplementsHeaderContext* bapelParser::implementsHeader() {
  ImplementsHeaderContext *_localctx = _tracker.createInstance<ImplementsHeaderContext>(_ctx, getState());
  enterRule(_localctx, 4, bapelParser::RuleImplementsHeader);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(207);
    match(bapelParser::IMPLEMENTS);
    setState(208);
    moduleID();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WorkspaceContext ------------------------------------------------------------------

bapelParser::WorkspaceContext::WorkspaceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bapelParser::WorkspaceContext::WORKSPACE() {
  return getToken(bapelParser::WORKSPACE, 0);
}

tree::TerminalNode* bapelParser::WorkspaceContext::LBRACE() {
  return getToken(bapelParser::LBRACE, 0);
}

bapelParser::PackagesSectionContext* bapelParser::WorkspaceContext::packagesSection() {
  return getRuleContext<bapelParser::PackagesSectionContext>(0);
}

tree::TerminalNode* bapelParser::WorkspaceContext::RBRACE() {
  return getToken(bapelParser::RBRACE, 0);
}


size_t bapelParser::WorkspaceContext::getRuleIndex() const {
  return bapelParser::RuleWorkspace;
}


antlrcpp::Any bapelParser::WorkspaceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitWorkspace(this);
  else
    return visitor->visitChildren(this);
}

bapelParser::WorkspaceContext* bapelParser::workspace() {
  WorkspaceContext *_localctx = _tracker.createInstance<WorkspaceContext>(_ctx, getState());
  enterRule(_localctx, 6, bapelParser::RuleWorkspace);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(210);
    match(bapelParser::WORKSPACE);
    setState(211);
    match(bapelParser::LBRACE);
    setState(212);
    packagesSection();
    setState(213);
    match(bapelParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackagesSectionContext ------------------------------------------------------------------

bapelParser::PackagesSectionContext::PackagesSectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bapelParser::PackagesSectionContext::PACKAGES() {
  return getToken(bapelParser::PACKAGES, 0);
}

tree::TerminalNode* bapelParser::PackagesSectionContext::LBRACE() {
  return getToken(bapelParser::LBRACE, 0);
}

tree::TerminalNode* bapelParser::PackagesSectionContext::RBRACE() {
  return getToken(bapelParser::RBRACE, 0);
}

std::vector<bapelParser::PackageRuleContext *> bapelParser::PackagesSectionContext::packageRule() {
  return getRuleContexts<bapelParser::PackageRuleContext>();
}

bapelParser::PackageRuleContext* bapelParser::PackagesSectionContext::packageRule(size_t i) {
  return getRuleContext<bapelParser::PackageRuleContext>(i);
}


size_t bapelParser::PackagesSectionContext::getRuleIndex() const {
  return bapelParser::RulePackagesSection;
}


antlrcpp::Any bapelParser::PackagesSectionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitPackagesSection(this);
  else
    return visitor->visitChildren(this);
}

bapelParser::PackagesSectionContext* bapelParser::packagesSection() {
  PackagesSectionContext *_localctx = _tracker.createInstance<PackagesSectionContext>(_ctx, getState());
  enterRule(_localctx, 8, bapelParser::RulePackagesSection);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(215);
    match(bapelParser::PACKAGES);
    setState(216);
    match(bapelParser::LBRACE);
    setState(218); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(217);
      packageRule();
      setState(220); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == bapelParser::PREFIX

    || _la == bapelParser::MODULE);
    setState(222);
    match(bapelParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageRuleContext ------------------------------------------------------------------

bapelParser::PackageRuleContext::PackageRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bapelParser::PackageRuleContext::PREFIX() {
  return getToken(bapelParser::PREFIX, 0);
}

bapelParser::ModuleIDContext* bapelParser::PackageRuleContext::moduleID() {
  return getRuleContext<bapelParser::ModuleIDContext>(0);
}

tree::TerminalNode* bapelParser::PackageRuleContext::IN() {
  return getToken(bapelParser::IN, 0);
}

bapelParser::FilenameContext* bapelParser::PackageRuleContext::filename() {
  return getRuleContext<bapelParser::FilenameContext>(0);
}

tree::TerminalNode* bapelParser::PackageRuleContext::MODULE() {
  return getToken(bapelParser::MODULE, 0);
}


size_t bapelParser::PackageRuleContext::getRuleIndex() const {
  return bapelParser::RulePackageRule;
}


antlrcpp::Any bapelParser::PackageRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitPackageRule(this);
  else
    return visitor->visitChildren(this);
}

bapelParser::PackageRuleContext* bapelParser::packageRule() {
  PackageRuleContext *_localctx = _tracker.createInstance<PackageRuleContext>(_ctx, getState());
  enterRule(_localctx, 10, bapelParser::RulePackageRule);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(234);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case bapelParser::PREFIX: {
        enterOuterAlt(_localctx, 1);
        setState(224);
        match(bapelParser::PREFIX);
        setState(225);
        moduleID();
        setState(226);
        match(bapelParser::IN);
        setState(227);
        filename();
        break;
      }

      case bapelParser::MODULE: {
        enterOuterAlt(_localctx, 2);
        setState(229);
        match(bapelParser::MODULE);
        setState(230);
        moduleID();
        setState(231);
        match(bapelParser::IN);
        setState(232);
        filename();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportsSectionContext ------------------------------------------------------------------

bapelParser::ImportsSectionContext::ImportsSectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bapelParser::ImportsSectionContext::IMPORTS() {
  return getToken(bapelParser::IMPORTS, 0);
}

tree::TerminalNode* bapelParser::ImportsSectionContext::LBRACE() {
  return getToken(bapelParser::LBRACE, 0);
}

tree::TerminalNode* bapelParser::ImportsSectionContext::RBRACE() {
  return getToken(bapelParser::RBRACE, 0);
}

std::vector<bapelParser::ModuleIDContext *> bapelParser::ImportsSectionContext::moduleID() {
  return getRuleContexts<bapelParser::ModuleIDContext>();
}

bapelParser::ModuleIDContext* bapelParser::ImportsSectionContext::moduleID(size_t i) {
  return getRuleContext<bapelParser::ModuleIDContext>(i);
}


size_t bapelParser::ImportsSectionContext::getRuleIndex() const {
  return bapelParser::RuleImportsSection;
}


antlrcpp::Any bapelParser::ImportsSectionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitImportsSection(this);
  else
    return visitor->visitChildren(this);
}

bapelParser::ImportsSectionContext* bapelParser::importsSection() {
  ImportsSectionContext *_localctx = _tracker.createInstance<ImportsSectionContext>(_ctx, getState());
  enterRule(_localctx, 12, bapelParser::RuleImportsSection);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(236);
    match(bapelParser::IMPORTS);
    setState(237);
    match(bapelParser::LBRACE);
    setState(239); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(238);
      moduleID();
      setState(241); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == bapelParser::IDENTIFIER);
    setState(243);
    match(bapelParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImplsSectionContext ------------------------------------------------------------------

bapelParser::ImplsSectionContext::ImplsSectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bapelParser::ImplsSectionContext::IMPLS() {
  return getToken(bapelParser::IMPLS, 0);
}

tree::TerminalNode* bapelParser::ImplsSectionContext::LBRACE() {
  return getToken(bapelParser::LBRACE, 0);
}

tree::TerminalNode* bapelParser::ImplsSectionContext::RBRACE() {
  return getToken(bapelParser::RBRACE, 0);
}

std::vector<bapelParser::FilenameContext *> bapelParser::ImplsSectionContext::filename() {
  return getRuleContexts<bapelParser::FilenameContext>();
}

bapelParser::FilenameContext* bapelParser::ImplsSectionContext::filename(size_t i) {
  return getRuleContext<bapelParser::FilenameContext>(i);
}


size_t bapelParser::ImplsSectionContext::getRuleIndex() const {
  return bapelParser::RuleImplsSection;
}


antlrcpp::Any bapelParser::ImplsSectionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitImplsSection(this);
  else
    return visitor->visitChildren(this);
}

bapelParser::ImplsSectionContext* bapelParser::implsSection() {
  ImplsSectionContext *_localctx = _tracker.createInstance<ImplsSectionContext>(_ctx, getState());
  enterRule(_localctx, 14, bapelParser::RuleImplsSection);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(245);
    match(bapelParser::IMPLS);
    setState(246);
    match(bapelParser::LBRACE);
    setState(248); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(247);
      filename();
      setState(250); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == bapelParser::STRING_LITERAL);
    setState(252);
    match(bapelParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FlagsSectionContext ------------------------------------------------------------------

bapelParser::FlagsSectionContext::FlagsSectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bapelParser::FlagsSectionContext::FLAGS() {
  return getToken(bapelParser::FLAGS, 0);
}

tree::TerminalNode* bapelParser::FlagsSectionContext::LBRACE() {
  return getToken(bapelParser::LBRACE, 0);
}

tree::TerminalNode* bapelParser::FlagsSectionContext::RBRACE() {
  return getToken(bapelParser::RBRACE, 0);
}

std::vector<bapelParser::FilenameContext *> bapelParser::FlagsSectionContext::filename() {
  return getRuleContexts<bapelParser::FilenameContext>();
}

bapelParser::FilenameContext* bapelParser::FlagsSectionContext::filename(size_t i) {
  return getRuleContext<bapelParser::FilenameContext>(i);
}


size_t bapelParser::FlagsSectionContext::getRuleIndex() const {
  return bapelParser::RuleFlagsSection;
}


antlrcpp::Any bapelParser::FlagsSectionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bapelVisitor*>(visitor))
    return parserVisitor->visitFlagsSection(this);
  else
    return visitor->visitChildren(this);
}

bapelParser::FlagsSectionContext* bapelParser::flagsSection() {
  FlagsSectionContext *_localctx = _tracker.createInstance<FlagsSectionContext>(_ctx, getState());
  enterRule(_localctx, 16, bapelParser::RuleFlagsSection);
  size_t _la = 0;
